crates/bijux-pipelines-bam/tests/snapshots/profiles__bam_adna_capture_profile.snap
---
source: crates/bijux-pipelines-bam/tests/profiles.rs
assertion_line: 18
expression: bam_adna_capture_profile()
---
{
  "id": "adna-capture",
  "description": "Ancient DNA capture defaults",
  "stages": [
    "Validate",
    "QcPre",
    "Filter",
    "Markdup",
    "Complexity",
    "Coverage",
    "Damage",
    "Authenticity",
    "Contamination",
    "Sex",
    "BiasMitigation",
    "Haplogroups",
    "Genotyping",
    "Kinship"
  ],
  "defaults": [
    {
      "stage": "Validate",
      "tool": "samtools",
      "params": {
        "stage": "validate",
        "strict": true
      }
    },
    {
      "stage": "QcPre",
      "tool": "samtools",
      "params": {
        "stage": "qc_pre",
        "regions": null
      }
    },
    {
      "stage": "Filter",
      "tool": "samtools",
      "params": {
        "stage": "filter",
        "mapq_threshold": 30,
        "include_flags": [],
        "exclude_flags": [],
        "min_length": 25,
        "remove_duplicates": false,
        "base_quality_threshold": 20
      }
    },
    {
      "stage": "Markdup",
      "tool": "gatk",
      "params": {
        "stage": "markdup",
        "optical_duplicates": "mark_only",
        "umi_policy": "ignore",
        "duplicate_action": "mark"
      }
    },
    {
      "stage": "Complexity",
      "tool": "preseq",
      "params": {
        "stage": "complexity",
        "min_reads": 100000,
        "projection_points": [
          1000000,
          2000000
        ]
      }
    },
    {
      "stage": "Coverage",
      "tool": "mosdepth",
      "params": {
        "stage": "coverage",
        "regions": null,
        "depth_thresholds": [
          1,
          3,
          5
        ]
      }
    },
    {
      "stage": "Damage",
      "tool": "pydamage",
      "params": {
        "stage": "damage",
        "udg_model": "non_udg",
        "pmd_threshold_5p": 0.3,
        "pmd_threshold_3p": 0.3,
        "trim_5p": 2,
        "trim_3p": 2
      }
    },
    {
      "stage": "Authenticity",
      "tool": "authenticity",
      "params": {
        "stage": "authenticity",
        "mode": "aggregate"
      }
    },
    {
      "stage": "Contamination",
      "tool": "authenticct",
      "params": {
        "stage": "contamination",
        "reference_panels": [],
        "scope": "both",
        "prior": null,
        "sex_specific": false,
        "assumptions": null
      }
    },
    {
      "stage": "Sex",
      "tool": "rxy",
      "params": {
        "stage": "sex",
        "expected_sex": null,
        "method": "rxy"
      }
    },
    {
      "stage": "BiasMitigation",
      "tool": "angsd",
      "params": {
        "stage": "bias_mitigation",
        "gc_bias_correction": true,
        "map_bias_correction": false
      }
    },
    {
      "stage": "Recalibration",
      "tool": "gatk",
      "params": {
        "stage": "recalibration",
        "known_sites": [],
        "mode": "standard",
        "skip_criteria": {
          "min_mean_coverage": 2.0,
          "min_breadth_1x": 0.5
        }
      }
    },
    {
      "stage": "Haplogroups",
      "tool": "yleaf",
      "params": {
        "stage": "haplogroups",
        "reference_panel": "rcrs.fasta",
        "min_coverage": 5.0
      }
    },
    {
      "stage": "Genotyping",
      "tool": "angsd",
      "params": {
        "stage": "genotyping",
        "caller": "angsd",
        "min_posterior": 0.8,
        "min_call_rate": 0.7
      }
    },
    {
      "stage": "Kinship",
      "tool": "king",
      "params": {
        "stage": "kinship",
        "reference_panel": "panel.vcf",
        "min_overlap_snps": 200
      }
    }
  ]
}
